--- a/local/pihole.yml
+++ b/local/pihole.yml
@@ -12,12 +12,13 @@
         recreate: yes
         restart_policy: always
         ports:
-          # - "53:53/tcp"
-          # - "53:53/udp"
+          - "53:53/tcp"
+          - "53:53/udp"
           - "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
           - "8001:80/tcp"
         env:
           TZ: "{{ timezone }}"
+          WEBPASSWORD: "password"
         # Volumes store your data between container upgrades
         volumes:
           - '/home/{{ setup_user }}/pihole:/etc/pihole'
