Add a reverse proxy

--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -114,7 +114,7 @@ services:
         target: "_blank"
       - name: "PiHole"
         logo: "assets/png/pihole.png"
-        url: "http://192.168.0.2:8001/admin"
+        url: "http://pihole.eva.me/admin"
         type: "PiHole"
       - name: "Home Assistant"
         logo: "assets/png/home-assistant.png"
@@ -126,5 +126,5 @@ services:
         logo: "assets/png/uptime-kuma.png"
         subtitle: "Uptime Kuma"
         tag: "app"
-        url: "http://192.168.0.2:3001"
+        url: "http://uptime.eva.me"
         target: "_blank"
