--- a/local/homer.yml
+++ b/local/homer.yml
@@ -18,6 +18,8 @@
         state: started
         recreate: yes
         restart_policy: always
+        networks:
+        - name: "eva"
         ports:
           - "5678:8080"
         volumes:
