--- a/local/pihole.yml
+++ b/local/pihole.yml
@@ -11,6 +11,8 @@
         state: started
         recreate: yes
         restart_policy: always
+        networks:
+        - name: "eva"
         ports:
           - "53:53/tcp"
           - "53:53/udp"
