--- a/local/uptime-kuma.yml
+++ b/local/uptime-kuma.yml
@@ -11,6 +11,8 @@
         state: started
         recreate: yes
         restart_policy: always
+        networks:
+        - name: "eva"
         ports:
           - "3001:3001"
         volumes:
