--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -74,7 +74,7 @@ services:
         logo: "assets/png/plex.png"
         subtitle: "Media"
         tag: "app"
-        url: "http://192.168.0.2:32410/"
+        url: "https://192.168.0.2:32400/web/"
         target: "_blank"
         type: "Ping"
   - name: "Piracy"
@@ -127,4 +127,10 @@ services:
         subtitle: "Uptime Kuma"
         tag: "app"
         url: "http://uptime.eva.me"
+        target: "_blank"
+      - name: "Yatch"
+        logo: "assets/png/yacht.png"
+        subtitle: "Yatch"
+        tag: "app"
+        url: "http://yatch.eva.me"
         target: "_blank"
