--- a/local/plex.yml
+++ b/local/plex.yml
@@ -7,16 +7,20 @@
   - name: Start plex
     docker_container:
       name: plex
-      image: plexinc/pms-docker
+      image: lscr.io/linuxserver/plex
       state: started
       recreate: yes
       restart_policy: always
-      networks:
-      - name: "eva"
-      ports:
-        - "32400:32400"
+      network_mode: "host"
+      # networks:
+      # - name: "eva"
+      # ports:
+      #   - "32400:32400"
       volumes:
         - /home/{{ setup_user }}/plex/config:/config
         - /home/{{ setup_user }}/plex/data:/data
       env:
         PLEX_CLAIM: claim-TaLvmW8TM4Jjr1cssN3s
+        PUID: "1000"
+        PGID: "1000"
+        VERSION: docker
