--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -67,8 +67,8 @@ links:
 # First level array represent a group.
 # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
 services:
-  - name: "Media"
-    icon: "fa fa-play-circle"
+  - name: "Applications"
+    icon: "fa fa-cloud"
     items:
       - name: "Plex Server"
         logo: "assets/png/plex.png"
@@ -76,51 +76,15 @@ services:
         tag: "app"
         url: "https://192.168.0.2:32400/web/"
         target: "_blank"
-        type: "Ping"
-  - name: "Piracy"
-    icon: "fas fa-skull-crossbones"
-    items:
-      - name: "Transmission"
-        logo: "assets/png/transmission.png"
-        subtitle: "Torrents client"
-        tag: "app"
-        url: "http://192.168.0.2:9091/"
-        target: "_blank"
-        type: "Ping"
-      - name: "Open Books"
-        logo: "assets/png/openbooks.png"
-        subtitle: "Books"
-        tag: "app"
-        url: "http://192.168.0.2:8090"
-        target: "_blank"
-      - name: "Lidarr"
-        logo: "assets/png/lidarr.png"
-        subtitle: "Music Collection Manager"
-        tag: "app"
-        url: "http://192.168.0.190:8686"
-        target: "_blank"
-  - name: "Applications"
-    icon: "fa fa-cloud"
-    items:
-      - name: "Omada"
-        logo: "assets/png/tplink.png"
-        subtitle: "Network Controller"
-        tag: "app"
-        url: "http://192.168.0.2:8088"
-        target: "_blank"
-      - name: "Portainer"
-        logo: "assets/png/portainer.png"
-        url: "https://192.168.0.2:9443"
-        target: "_blank"
-      - name: "PiHole"
-        logo: "assets/png/pihole.png"
-        url: "http://pihole.eva.me/admin"
-        type: "PiHole"
       - name: "Home Assistant"
         logo: "assets/png/home-assistant.png"
         subtitle: "Home Automation"
         tag: "app"
         url: "http://192.168.0.2:8123"
+        target: "_blank"
+      - name: "Portainer"
+        logo: "assets/png/portainer.png"
+        url: "https://192.168.0.2:9443"
         target: "_blank"
       - name: "Uptime Kuma"
         logo: "assets/png/uptime-kuma.png"
@@ -134,3 +98,54 @@ services:
         tag: "app"
         url: "http://yatch.eva.me"
         target: "_blank"
+  - name: "Piracy"
+    icon: "fas fa-skull-crossbones"
+    items:
+      - name: "Jackett"
+        logo: "assets/png/jackett.png"
+        subtitle: "Torrent Proxy Server"
+        url: "http://192.168.0.2:9117"
+        target: "_blank"
+      - name: "Lidarr"
+        logo: "assets/png/lidarr.png"
+        subtitle: "Music Collection Manager"
+        tag: "app"
+        url: "http://192.168.0.2:8686"
+        target: "_blank"
+      - name: "Open Books"
+        logo: "assets/png/openbooks.png"
+        subtitle: "Books"
+        tag: "app"
+        url: "http://192.168.0.2:8090"
+        target: "_blank"
+      - name: "Radarr"
+        logo: "assets/png/radarr.png"
+        subtitle: "Movies Media Manager"
+        tag: "app"
+        url: "http://192.168.0.190:7878"
+        target: "_blank"
+      - name: "Sonarr"
+        logo: "assets/png/sonarr.png"
+        subtitle: "TV Shows Media Manager"
+        tag: "app"
+        url: "http://192.168.0.190:8989"
+        target: "_blank"
+      - name: "Transmission"
+        logo: "assets/png/transmission.png"
+        subtitle: "Torrents client"
+        tag: "app"
+        url: "http://192.168.0.2:9091/"
+        target: "_blank"
+  - name: "Network"
+    icon: "fas fa-network-wired"
+    items:
+      - name: "Omada"
+        logo: "assets/png/tplink.png"
+        subtitle: "Network Controller"
+        tag: "app"
+        url: "http://192.168.0.2:8088"
+        target: "_blank"
+      - name: "PiHole"
+        logo: "assets/png/pihole.png"
+        url: "http://pihole.eva.me/admin"
+        type: "PiHole"
