Add subdomain for transmission

--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -122,19 +122,19 @@ services:
         logo: "assets/png/radarr.png"
         subtitle: "Movies Media Manager"
         tag: "app"
-        url: "http://192.168.0.190:7878"
+        url: "http://192.168.0.2:7878"
         target: "_blank"
       - name: "Sonarr"
         logo: "assets/png/sonarr.png"
         subtitle: "TV Shows Media Manager"
         tag: "app"
-        url: "http://192.168.0.190:8989"
+        url: "http://192.168.0.2:8989"
         target: "_blank"
       - name: "Transmission"
         logo: "assets/png/transmission.png"
         subtitle: "Torrents client"
         tag: "app"
-        url: "http://192.168.0.2:9091/"
+        url: "http://transmission.eva.me/"
         target: "_blank"
   - name: "Network"
     icon: "fas fa-network-wired"
