--- a/local/config/nginx/nginx.conf
+++ b/local/config/nginx/nginx.conf
@@ -81,6 +81,18 @@ http {
 
   server {
     listen 80;
+    server_name transmission.eva.me;
+
+    access_log /dev/stdout;
+    error_log /dev/stdout info;
+
+    location / {
+      proxy_pass http://transmission:9091;
+    }
+  }
+
+  server {
+    listen 80;
     server_name uptime.eva.me;
 
     access_log /dev/stdout;
