Configure FileBrowser and Transmission

--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -76,6 +76,12 @@ services:
         tag: "app"
         url: "https://192.168.0.2:32400/web/"
         target: "_blank"
+      - name: "FileBrowser"
+        icon: "fa fa-save"
+        subtitle: "File Borwser"
+        tag: "app"
+        url: "http://filebrowser.eva.me"
+        target: "_blank"
       - name: "Home Assistant"
         logo: "assets/png/home-assistant.png"
         subtitle: "Home Automation"
