--- a/local/config/homer/config.yml
+++ b/local/config/homer/config.yml
@@ -130,6 +130,12 @@ services:
         tag: "app"
         url: "http://192.168.0.2:7878"
         target: "_blank"
+      - name: "Readarr"
+        logo: "assets/png/readarr.png"
+        subtitle: "Books Manager"
+        tag: "app"
+        url: "http://192.168.0.2:8787"
+        target: "_blank"
       - name: "Sonarr"
         logo: "assets/png/sonarr.png"
         subtitle: "TV Shows Media Manager"
