--- a/do/ssl.yml
+++ b/do/ssl.yml
@@ -31,11 +31,10 @@
       docker_container:
         name: certbot
         image: certbot/certbot
-        command: certonly --webroot --webroot-path /var/www/certbot/ --non-interactive --agree-tos -m marcosvanetta@gmail.com -d killcss.xyz -d www.killcss.xyz
+        command: certonly --webroot --webroot-path /var/www/certbot/ --non-interactive --agree-tos -m m@gmail.com -d killcss.xyz -d www.killcss.xyz
         state: started
         recreate: no
         restart_policy: no
         volumes:
           - ./certbot/www/:/var/www/certbot/:rw
           - ./certbot/conf/:/etc/letsencrypt/:rw
-# certbot/certbot certonly --standalone --non-interactive --agree-tos -m marcosvanetta@gmail.com --webroot --webroot-path /var/www/certbot/ -d killcss.xyz -d www.killcss.xyz
