--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "eva"
 version = "0.1.0"
 description = ""
-authors = ["Marcos Vanetta <lol@glol.com>"]
+authors = ["Marcos Vanetta"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
