--- a/do/setup.yml
+++ b/do/setup.yml
@@ -19,6 +19,19 @@
           "python3-setuptools",
         ]
 
+    - name: Add Docker GPG apt Key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu bionic stable
+        state: present
+
+    - name: Update apt and install docker-ce
+      apt: update_cache=yes name=docker-ce state=latest
+
     - name: Install Docker Module for Python
       pip:
         name: docker
@@ -27,6 +40,12 @@
       pip:
         name: docker-compose
         state: present
+
+    - name: Add {{ do_user }} to docker group
+      user:
+        name: "{{ do_user }}"
+        groups: "docker"
+        append: "yes"
 
     - name: Setup killcss network
       docker_network:
