--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Marcos Vanetta"]
 [tool.poetry.dependencies]
 python = "^3.8"
 ansible = "^5.1.0"
+argparse = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
