--- a/k8s/codingnews.info.yml
+++ b/k8s/codingnews.info.yml
@@ -6,6 +6,7 @@ metadata:
     app: codingnews
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: codingnews
@@ -52,7 +53,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-    - host: killcss.xyz
+    - host: codingnews.info
       http:
         paths:
           - path: /
