--- a/k8s/pihole.yml
+++ b/k8s/pihole.yml
@@ -104,7 +104,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-    - host: dns.killcss.xyz
+    - host: dns.codingnews.info
       http:
         paths:
           - path: /
