--- a/k8s/subdomains.yml
+++ b/k8s/subdomains.yml
@@ -44,6 +44,10 @@ data:
             add_header             Cache-Control max-age=31536000;
             proxy_pass             http://$bucket;
           }
+
+          location /robots.txt {
+            return 200 "User-agent: *\nDisallow: /\n";
+          }
         }
 
         server {
@@ -75,6 +79,10 @@ data:
             add_header             Cache-Control max-age=31536000;
             proxy_pass             http://$bucket;
           }
+
+          location /robots.txt {
+            return 200 "User-agent: *\nDisallow: /\n";
+          }
         }
 
         server {
@@ -105,6 +113,10 @@ data:
             proxy_intercept_errors on;
             add_header             Cache-Control max-age=31536000;
             proxy_pass             http://$bucket;
+          }
+
+          location /robots.txt {
+            return 200 "User-agent: *\nDisallow: /\n";
           }
         }
     }
